--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 10px;
   z-index: 9998;
   border: 0;
-  background: none;
+  background: #EBECF0;
   font-size: 28px;
   transition: all 0.4s;
   outline: none !important;
@@ -237,6 +237,11 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
   border-radius: 50px;
   padding: 5px;
+}
+
+.mobile-nav-toggle:hover {
+background: #0563bb;
+color: #fff;
 }
 
 .mobile-nav-toggle i {
@@ -502,7 +507,9 @@ button[type="submited"]:hover {
   width: 100%;
   position: relative;
   text-align: center;
-  background: #fff;
+  background: #EBECF0;
+  opacity: 0.7;
+  border-radius: 30px;
 }
 
 .facts .count-box i {
@@ -531,6 +538,7 @@ button[type="submited"]:hover {
 .facts .count-box p {
   padding: 0;
   margin: 0;
+  color: black;
   font-family: "Raleway", sans-serif;
   font-size: 14px;
 }
@@ -601,8 +609,9 @@ button[type="submited"]:hover {
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
+  background: #BEBEBE;
   padding: 5px 15px;
+  border-radius: 4px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
@@ -1068,7 +1077,10 @@ button[type="submited"]:hover {
 --------------------------------------------------------------*/
 .contact .info {
   width: 100%;
-  background: #fff;
+  background: #EBECF0;
+  padding: 10px;
+  border-radius: 20px;
+  opacity: 0.8;
 }
 
 .contact .info i {
